# learnnest

./: .gitignore  Makefile
backend/: .env.example  .env.local.example  Cargo.toml
backend/config/: base.env  development.env  production.env
backend/migrations/: 0001_init.sql  0002_add_password_hash.sql
backend/src/: db.rs  error.rs  main.rs  response.rs
backend/src/app/: context.rs  from_pool.rs
backend/src/common/: context.rs  mod.rs
backend/src/config/: mod.rs
backend/src/handler/: account.rs  health.rs  mod.rs  register.rs  task.rs
backend/src/middleware/: auth.rs
backend/src/model/: account.rs  task.rs
backend/src/repository/: account.rs  mod.rs  task.rs
backend/src/service/: account.rs  task.rs
deploy/: compose.dev.yml  compose.prod.yml  compose.yml
deploy/nginx/: nginx.dev.conf  nginx.prod.conf
docs/: learning_mvp_design.md  learnnest_prd_v1.md  mvp_0_1_db_schema_and_migration_v1.md  mvp_0_1_db_schema_and_migration_v2.md  mvp_0_1_db_schema_and_migration_v3.md  solo_developer_methodology.md  tech-impl-guide.md  tech-list.md
