[package]
name = "learnnest"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web 框架
salvo = { version = "0.85", features = ["cors", "logging", "affix-state"] }
tokio = { version = "1", features = ["full"] }

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 配置
dotenvy = "0.15"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 工具
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

# 密码加密 (认证时用)
argon2 = "0.5"

# JWT (认证时用)
jsonwebtoken = "9"
